# justgiving_totaliser

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py
justgiving_totaliser/: __main__.py  announcer.py  common.py  justgiving_totaliser.py  scrape.py  types.py
justgiving_totaliser/tests/: test_justgiving_totaliser.py
justgiving_totaliser/widgets/: about.py  bonuses.py  countdown.py  donorlist.py  latestdonor.py  marquee.py  mixins.py  progressbar.py  timer.py
