[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "justgiving_totalizer"
version = "0.0.2"
authors = [
    {name = "Tachibana Kanade", email = "h0m54r@mastodon.social"},
]
description = "Monitor for JustGiving pages to show on streams."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4==4.12.2",
    "PyQt5==5.15.9",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/homsar/justgiving_totaliser"
"Bug Tracker" = "https://github.com/homsar/justgiving_totaliser/issues"
